Added Api tests

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,6 @@
 testrail.url=INPUT HERE
 testrail.user=INPUT HERE
 testrail.pass=INPUT HERE
+testrail.url.api=INPUT HERE
+testrail.api.token=INPUT HERE
+testrail.key=INPUT HERE
